Correct alignment of navbar

--- a/style/components/_nav-bar.scss
+++ b/style/components/_nav-bar.scss
@@ -50,6 +50,7 @@
 
   color: $white;
   text-decoration: none;
+  vertical-align: top;
 }
 
 .nav-bar__links {
